--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
-/* Add CSS Styling */
+/* Add CSS Styling here! */
+.avatar-proportioned {
+    height: auto;
+    width: 300px;
+}
+
+.avatar-distorted {
+    height: 400px;
+    width: 200px;
+}
